--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,9 @@
+# ████████╗██╗██╗░░░░░██╗███╗░░██╗░██████╗░
+# ╚══██╔══╝██║██║░░░░░██║████╗░██║██╔════╝░
+# ░░░██║░░░██║██║░░░░░██║██╔██╗██║██║░░██╗░
+# ░░░██║░░░██║██║░░░░░██║██║╚████║██║░░╚██╗
+# ░░░██║░░░██║███████╗██║██║░╚███║╚██████╔╝
+# ░░░╚═╝░░░╚═╝╚══════╝╚═╝╚═╝░░╚══╝░╚═════╝░
 # SI SE BUGEA LA VENTANA EN FULLSCREEN (al usar Alt+F):
 # ----------------- ACTIVAR VANILLA Windows -------------------
 
@@ -9,87 +15,92 @@
 
 # ---------------- configuration GlazeWM ----------------------
 general:
+  # Commands to run when the WM has started (e.g. to run a script or launch
+  # another application).
   # ========================================
   # *- EXEC-ONCE -*
   # ========================================
-  # startup_commands: [] # SIN NADA
   # *- EXEC-ONCE INDIVIDUAL: -*-
+  # startup_commands: [] # SIN NADA
   startup_commands:
-    - "shell-exec python C:\\Users\\Diego\\Documents\\Scripts\\autotiling.py"
+    # - "shell-exec python C:\\Users\\Diego\\Documents\\Scripts\\autotiling.py"
     - "shell-exec pwsh -WindowStyle Hidden -Command \"& 'C:\\Users\\Diego\\Documents\\Scripts\\delete-edge.ps1'; exit\""
     - "shell-exec zebar"
     # - "shell-exec wscript C:\\Users\\Diego\\Documents\\Scripts\\montar_unidades.vbs"
     # - "shell-exec python C:\\Users\\Diego\\Documents\\Scripts\\montar_unidades.py"
 
+  # *- INICIAR VARIOS: -*-
+  # startup_commands: ["shell-exec zebar", "shell-exec gat-gwm"]
+
+  # Commands to run just before the WM is shutdown.
+  shutdown_commands: []
+
+  # Commands to run after the WM config has reloaded.
+  config_reload_commands: []
+
+  # GlazeWM, by default, centers all floating windows when
+  # connecting/disconnecting monitors. When working with many floating windows,
+  # this could disturb your workflow. Setting this to true will try to leave
+  # floating windows at their current position at the price of having windows
+  # partly off the screen when switching to a lower resolution monitor.
   # FIX TEMPORAL DEL BUG DE MANO DE: github.com/glzr-io/glazewm/pull/1166
   prevent_centering_of_floating_windows: true # ← CAMBIA A TRUE
   # TUVE QUE COMPILAR EL PR Y REMPLAZARLO A; C:\Program Files\glzr.io\GlazeWM
   # hice bakcup del compilado en: I:\Mi unidad\Mi unidad\[PROGRAMACION]\-[~ {GlazeWM} Windows --{[) To Linux [OS THEME] {Tile Manager}\[GLAZEWM] make-windows-pretty-main-dizzi\GlazeWm Fix to Floting center glitch
 
-  # *- INICIAR VARIOS: -*-
-  # startup_commands: ["shell-exec zebar"]
-
   # Whether to automatically focus windows underneath the cursor.
   focus_follows_cursor: false
-  # Whether to switch back and forth between the previously focused
 
+  # Whether to switch back and forth between the previously focused
   # workspace when focusing the current workspace.
   toggle_workspace_on_refocus: false
+
   cursor_jump:
     # Whether to automatically move the cursor on the specified trigger.
     enabled: true
-    # Trigger for cursor jump:
 
+    # Trigger for cursor jump:
     # - 'monitor_focus': Jump when focus changes between monitors.
     # - 'window_focus': Jump when focus changes between windows.
-    # trigger: "monitor_focus"
-    trigger: "window_focus"
+    trigger: "monitor_focus"
+    # trigger: "window_focus"
 
   # ========================================
   # *- WINDOWS, MARGEN
   # ========================================
+#
+# gaps:
+#   # Gap between adjacent windows.
+#   inner_gap: "0px" # ✅ CERO espacio entre ventanas
+#
+#   # Gap between windows and the screen edge.
+#   outer_gap:
+#     top: "0px" # ✅ CERO espacio en bordes
+#     right: "0px"
+#     bottom: "0px"
+#     left: "0px"
 
 gaps:
-  inner_gap: "0px" # ✅ CERO espacio entre ventanas
+  # Gap between adjacent windows.
+  inner_gap: "10px"
+  # Gap between windows and the screen edge.
   outer_gap:
-    top: "0px" # ✅ CERO espacio en bordes
-    right: "0px"
-    bottom: "0px"
-    left: "0px"
+    top: "40px"
+    right: "10px"
+    bottom: "10px"
+    left: "10px"
 
-  # ========================================
-  # *- ANIMATIONS -*
-  # ========================================
-window_effects:
-  # Visual effects to apply to the focused window.
-  focused_window:
-    # Highlight the window with a colored border.
-    # ** Exclusive to Windows 11 due to API limitations.
-    border:
-      enabled: true
-      color: "#bea3c7"
-  # Visual effects to apply to non-focused windows.
-
-  other_windows:
-    border:
-      enabled: true
-      color: "#a1a1a1"
-
-window_behavior:
-  initial_state: "floating" # ← Mejor para un window manager
-  state_defaults:
-    floating:
-      centered: false # ← ✅ EVITA EL CENTRADO AUTOMÁTICO
-      shown_on_top: false
-    fullscreen:
-      maximized: false
-      shown_on_top: false
-
-  # ========================================
-  # APLICACIONES ESPECÍFICAS
-  # ========================================
+# ========================================
+# WORKSPACES
+# ========================================
 workspaces:
+  # This is the unique ID for the workspace. It's used in keybinding
+  # commands, and is also the label shown in 3rd-party apps (e.g. Zebar) if
+  # `display_name` is not provided.
   - name: "1"
+    # Optional override for the workspace label used in 3rd-party apps.
+    # Does not need to be unique.
+    display_name: "2B^ Kaine🖤"
   - name: "2"
   - name: "3"
   - name: "4"
@@ -99,24 +110,103 @@ workspaces:
   - name: "8"
   - name: "9"
 
-# ✅ SOLO REGLAS MÍNIMAS
+    # Optionally force the workspace on a specific monitor if it exists.
+    # 0 is your leftmost screen, 1 is the next one to the right, and so on.
+    bind_to_monitor: 0
+
+    # Optionally prevent workspace from being deactivated when empty.
+    keep_alive: false
+
+  # ========================================
+  # APLICACIONES ESPECÍFICAS
+  # ========================================
+
 window_rules:
+  # ---------------- floating ----------------------
+  - commands: ["set-floating"]
+    match:
+      - window_process: { equals: "Flow.Launcher" }
+        window_title: { equals: "Settings" }
+      # GEFORC NOW
+      - window_process: { equals: "Taskmgr" }
+      - window_process: { equals: "Calculator" }
+      - window_process: { equals: "NVIDIA" }
+
+      # ✅ AGREGAR ESTAS REGLAS para diálogos flotantes
+      # SOLO las más esenciales
+      # 3. Diálogos de búsqueda/reemplazo (más específico)
+      - window_title:
+          { regex: "^Find$|^Replace$|^Search$|^Buscar$|^Reemplazar$" }
+        window_class: { regex: ".*" }
+
+      # 4. Diálogos de configuración
+      - window_title:
+          { regex: "^Settings$|^Preferences$|^Options$|^Configuración$" }
+        window_class: { regex: ".*" }
+
+      # 5. Diálogos de login/auth
+      - window_title:
+          { regex: "^Sign in$|^Log in$|^Iniciar sesión$|^Authentication$" }
+        window_class: { regex: ".*" }
+
+      - window_class: { equals: "#32770" } # Diálogos nativos
+      # Notificaciones
+      - window_title: { regex: "Notification|Alert" }
+
+  - commands: ["move --workspace 1"]
+    match:
+      # Move browsers to workspace 1.
+      - window_process: { regex: "msedge|brave|chrome|firefox" }
+
+  # ---------------- ignorar ----------------------
   - commands: ["ignore"]
     match:
       # Ignores any Zebar windows.
       - window_process: { equals: "zebar" }
-      - window_title: { regex: "[Pp]icture.in.[Pp]icture" }
-        # Ignores picture-in-picture windows for browsers.
 
+      # Ignores picture-in-picture windows for browsers.
+      # Note that *both* the title and class must match for the rule to run.
+      - window_title: { regex: "[Pp]icture.in.[Pp]icture" }
         window_class: { regex: "Chrome_WidgetWin_1|MozillaDialogClass" }
       - window_process: { equals: "PowerToys.PowerAccent" }
         # Ignore rules for various 3rd-party apps.
       - window_process: { equals: "Lively" }
         window_class: { regex: "HwndWrapper*" }
 
-  # - commands: ["set-floating"]
+  # ---------------- tiling ----------------------
+  # - commands: ["set-tiling"]
   #   match:
   #     - window_class: { regex: ".*" } # Aplica a todas las ventanas
+
+  # ========================================
+# *- ANIMATIONS ~ STYLES
+# ========================================
+
+window_effects:
+  # Visual effects to apply to the focused window.
+  focused_window:
+    # Highlight the window with a colored border.
+    border:
+      enabled: true
+      color: "#bea3c7"
+      # color: "#0000ff"
+
+  # Visual effects to apply to non-focused windows.
+  other_windows:
+    border:
+      enabled: true
+      color: "#a1a1a1"
+      # color: "#d3d3d3"
+
+window_behavior:
+  initial_state: "tiling" # ← Mejor para un window manager
+  state_defaults:
+    floating:
+      centered: false # ← ✅ EVITA EL CENTRADO AUTOMÁTICO
+      shown_on_top: false
+    fullscreen:
+      maximized: false
+      shown_on_top: false
 
 # ========================================
 # ✅ KEYBINDINGS ESENCIALE
@@ -165,9 +255,9 @@ keybindings:
     bindings: ["alt+shift+k", "alt+shift+up"]
   - commands: ["move --direction down"]
     bindings: ["alt+shift+j", "alt+shift+down"]
-  - commands: ["resize --width -2%"]
     # Resize focused window by a percentage or pixel amount.
 
+  - commands: ["resize --width -2%"]
     bindings: ["alt+ctrl+h", "alt+ctrl+left"]
   - commands: ["resize --width +2%"]
     bindings: ["alt+ctrl+l", "alt+ctrl+right"]
