--- a/config.yaml [floating]/config.yaml
+++ b/config.yaml [floating]/config.yaml
@@ -68,27 +68,27 @@ general:
   # ========================================
   # *- WINDOWS, MARGEN
   # ========================================
-#
-# gaps:
-#   # Gap between adjacent windows.
-#   inner_gap: "0px" # ✅ CERO espacio entre ventanas
-#
-#   # Gap between windows and the screen edge.
-#   outer_gap:
-#     top: "0px" # ✅ CERO espacio en bordes
-#     right: "0px"
-#     bottom: "0px"
-#     left: "0px"
 
 gaps:
-# Gap between adjacent windows.
-inner_gap: "10px"
-# Gap between windows and the screen edge.
-outer_gap:
-top: "10px"
-right: "10px"
-bottom: "10px"
-left: "10px"
+  # Gap between adjacent windows.
+  inner_gap: "10px" # ✅ CERO espacio entre ventanas
+
+  # Gap between windows and the screen edge.
+  outer_gap:
+    top: "40px" # ✅ CERO espacio en bordes
+    right: "0px"
+    bottom: "0px"
+    left: "0px"
+
+# gaps:
+#   # Gap between adjacent windows.
+#   inner_gap: "10px"
+#   # Gap between windows and the screen edge.
+#   outer_gap:
+#     top: "40px"
+#     right: "10px"
+#     bottom: "10px"
+#     left: "10px"
 
 # ========================================
 # WORKSPACES
@@ -97,6 +97,10 @@ workspaces:
   # This is the unique ID for the workspace. It's used in keybinding
   # commands, and is also the label shown in 3rd-party apps (e.g. Zebar) if
   # `display_name` is not provided.
+  - name: "1" # Al arrancar inicia en el 1
+    # Optional override for the workspace label used in 3rd-party apps.
+    # Does not need to be unique.
+    display_name: "2B^ Kaine🖤"
   - name: "2"
   - name: "3"
   - name: "4"
@@ -106,11 +110,6 @@ workspaces:
   - name: "8"
   - name: "9"
     display_name: "Music🎻"
-
-  - name: "1" # Al arrancar inicia en el 1
-    # Optional override for the workspace label used in 3rd-party apps.
-    # Does not need to be unique.
-    display_name: "2B^ Kaine🖤"
 
     # Optionally force the workspace on a specific monitor if it exists.
     # 0 is your leftmost screen, 1 is the next one to the right, and so on.
@@ -133,10 +132,11 @@ window_rules:
       - window_process: { equals: "Taskmgr" }
       - window_process: { equals: "Calculator" }
       - window_process: { equals: "NVIDIA" }
+      - window_process: { equals: "PowerToys" }
 
   # ---------------- mover workspaces ----------------------
   # BROWSERS
-  - commands: ["move --workspace 2"]
+  - commands: ["move --workspace 1"]
     match:
       # Move browsers to workspace 1.
       - window_process: { regex: "msedge|brave|chrome|firefox" }
@@ -158,7 +158,6 @@ window_rules:
       # Note that *both* the title and class must match for the rule to run.
       - window_title: { regex: "[Pp]icture.in.[Pp]icture" }
         window_class: { regex: "Chrome_WidgetWin_1|MozillaDialogClass" }
-      - window_process: { equals: "PowerToys.PowerAccent" }
         # Ignore rules for various 3rd-party apps.
       - window_process: { equals: "Lively" }
         window_class: { regex: "HwndWrapper*" }
