--- a/{Visual Studio Code} Config+[TIER Dotfiles ]/settings.json
+++ b/{Visual Studio Code} Config+[TIER Dotfiles ]/settings.json
@@ -304,6 +304,8 @@
   "security.workspace.trust.banner": "never",
   "security.workspace.trust.enabled": false,
   "oil-code.enableWorkspaceEdit": true,
+  "terminal.integrated.fontFamily": "Hack Nerd Font",
+  "terminal.integrated.fontLigatures.enabled": true,
   // -------------------- (BLUR GLASS) VIBRANCY SETTINGS -----------------
   // Activar el Blur , glass effect
   // "vscode_vibrancy.type": "acrylic",
