--- a/config.yaml
+++ b/config.yaml
@@ -211,14 +211,14 @@ window_effects:
   focused_window:
     # Highlight the window with a colored border.
     border:
-      enabled: true
+      enabled: false  # ✅ DESACTIVADO para eliminar huecos visuales
       color: "#bea3c7"
       # color: "#0000ff"
 
   # Visual effects to apply to non-focused windows.
   other_windows:
     border:
-      enabled: true
+      enabled: false  # ✅ DESACTIVADO para eliminar huecos visuales
       color: "#a1a1a1"
       # color: "#d3d3d3"
 
