--- a/config.yaml
+++ b/config.yaml
@@ -78,14 +78,14 @@ general:
 
 gaps:
   # Gap between adjacent windows.
-  inner_gap: "0px" # ✅ CERO espacio entre ventanas
+  inner_gap: "3px" # ✅ CERO espacio entre ventanas
 
   # Gap between windows and the screen edge.
   outer_gap:
-    top: "0px" # ✅ CERO espacio en bordes
-    right: "0px"
-    bottom: "0px"
-    left: "0px"
+    top: "3px" # ✅ CERO espacio en bordes
+    right: "3px"
+    bottom: "3px"
+    left: "3px"
 
 # gaps:
 #   # Gap between adjacent windows.
@@ -211,14 +211,14 @@ window_effects:
   focused_window:
     # Highlight the window with a colored border.
     border:
-      enabled: false  # ✅ DESACTIVADO para eliminar huecos visuales
+      enabled: true
       color: "#bea3c7"
       # color: "#0000ff"
 
   # Visual effects to apply to non-focused windows.
   other_windows:
     border:
-      enabled: false  # ✅ DESACTIVADO para eliminar huecos visuales
+      enabled: true
       color: "#a1a1a1"
       # color: "#d3d3d3"
 
